[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Menues/Player_Join_Menu/Player_Join_Menu.gd" type="Script" id=1]
[ext_resource path="res://Retrophile Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Images/ui/button_focused.png" type="Texture" id=3]
[ext_resource path="res://Images/ui/button.png" type="Texture" id=4]
[ext_resource path="res://Images/ui/button_active.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Menues/Menu_Background.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Menues/Buttons/Back.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/TransitionMask.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 22
extra_spacing_bottom = 10
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "wiggle"
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/Label2:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 0.402624, 2.54912, 0.4, 2.2, 2.2 ),
"update": 0,
"values": [ 0.0, 5.0, 0.0, -5.0, 0.0 ]
}

[node name="Player_Join_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" parent="." instance=ExtResource( 6 )]

[node name="Dummy" type="CenterContainer" parent="."]
margin_top = 100.0
margin_right = 1024.0
margin_bottom = 450.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Press \"Q\" on Keyboard or Start on Joypads to Join the Game!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 80.0
margin_right = 1024.0
margin_bottom = 130.0
rect_pivot_offset = Vector2( 512, 25 )
custom_fonts/font = SubResource( 2 )
text = "0 Players Joined"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 1024.0
margin_bottom = 80.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 1024.0
margin_bottom = 130.0

[node name="Next_Button" type="TextureButton" parent="VBoxContainer/CenterContainer"]
visible = false
margin_left = 437.0
margin_top = -25.0
margin_right = 587.0
margin_bottom = 25.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer/Next_Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Next Step"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/wiggle = SubResource( 4 )

[node name="Back" parent="." instance=ExtResource( 7 )]
anchor_top = 0.916667
anchor_right = 0.195313
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0
transition_mask = NodePath("../TransitionMask")

[node name="TransitionMask" parent="." instance=ExtResource( 8 )]
[connection signal="pressed" from="VBoxContainer/CenterContainer/Next_Button" to="." method="_on_Next_Button_pressed"]
